--- a/app/index.html
+++ b/app/index.html
@@ -51,9 +51,9 @@
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">Expense<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#/add_income">Add expense</a></li>
-                  <li><a href="#/incomes_history">Expenses history</a></li>
-                  <li><a href="#/incomes_chart">Expenses chart</a></li>
+                  <li><a href="#/add_expense">Add expense</a></li>
+                  <li><a href="#/expenses_history">Expenses history</a></li>
+                  <li><a href="#/expenses_chart">Expenses chart</a></li>
                 </ul>
               </li>
             </ul>
@@ -110,6 +110,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/sign_up.js"></script>
+        <script src="scripts/controllers/add_expense.js"></script>
+        <script src="scripts/controllers/add_income.js"></script>
+        <script src="scripts/services/category_service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
