Add login form.

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="#/about"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             </ul>
           </div>
         </div>
@@ -74,7 +74,7 @@
       <div class="container">
         <p>
           <span><img src="images/logo.svg" height="23" width="23"> My Money Tracker</span>
-          <span style="float:right;">Copyright © 2016 Florin & Tudor - All rights reserved</span>
+          <span style="float:right;">Copyright © 2016 Florin - All rights reserved</span>
         </p>
       </div>
     </div>
@@ -110,6 +110,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/sign_up.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/add_expense.js"></script>
         <script src="scripts/controllers/add_income.js"></script>
         <script src="scripts/services/category_service.js"></script>
