--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/controllers/add_expense.js"></script>
         <script src="scripts/controllers/add_income.js"></script>
         <script src="scripts/services/category_service.js"></script>
+        <script src="scripts/services/host_name.js"></script>
         <!-- endbuild -->
 </body>
 </html>
