--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/sign_up.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/logout.js"></script>
         <script src="scripts/controllers/add_expense.js"></script>
         <script src="scripts/controllers/add_income.js"></script>
         <script src="scripts/services/category_service.js"></script>
