--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li ng-hide="authenticated"><a href="#/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
               <li ng-hide="authenticated"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-              <li ng-show="authenticated"><a href="#/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+              <li ng-show="authenticated"><a href="#/profile"><span class="glyphicon glyphicon-user"></span> {{username}}</a></li>
               <li ng-show="authenticated"><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
           </div>
@@ -113,11 +113,12 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/sign_up.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/logout.js"></script>
-        <script src="scripts/controllers/add_expense.js"></script>
-        <script src="scripts/controllers/add_income.js"></script>
+        <script src="scripts/controllers/user/sign_up.js"></script>
+        <script src="scripts/controllers/user/login.js"></script>
+        <script src="scripts/controllers/user/logout.js"></script>
+        <script src="scripts/controllers/expense/add_expense.js"></script>
+        <script src="scripts/controllers/expense/expenses_history.js"></script>
+        <script src="scripts/controllers/income/add_income.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
         <!-- endbuild -->
