Added warning popup + delete expense skeleton added.

--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -119,8 +120,11 @@
         <script src="scripts/controllers/expense/add_expense.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
         <script src="scripts/controllers/income/add_income.js"></script>
+        <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/services/modal_template_service.js"></script>
+        <script src="scripts/directives/bs_tooltip.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
