--- a/app/index.html
+++ b/app/index.html
@@ -120,8 +120,11 @@
         <script src="scripts/controllers/expense/add_expense.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
         <script src="scripts/controllers/income/add_income.js"></script>
+        <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
+        <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/services/category_service.js"></script>
+        <script src="scripts/services/date_time_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
         <script src="scripts/services/modal_template_service.js"></script>
         <script src="scripts/directives/bs_tooltip.js"></script>
