Edit income added.

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
+        <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
