--- a/app/index.html
+++ b/app/index.html
@@ -124,11 +124,13 @@
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
+        <script src="scripts/controllers/modal/category_filter_popup.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
         <script src="scripts/services/modal_template_service.js"></script>
         <script src="scripts/directives/bs_tooltip.js"></script>
-    <!-- endbuild -->
+        <script src="scripts/filters/unique.js"></script>
+        <!-- endbuild -->
 </body>
 </html>
