Created Categories tab for expenses.

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
                   <li><a href="#/add_expense">Add expense</a></li>
                   <li><a href="#/expenses_history">Expenses history</a></li>
                   <li><a href="#/expenses_chart">Expenses chart</a></li>
+                  <li><a href="#/expense_categories">Categories</a></li>
                 </ul>
               </li>
             </ul>
@@ -119,12 +120,14 @@
         <script src="scripts/controllers/user/logout.js"></script>
         <script src="scripts/controllers/expense/add_expense.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
+        <script src="scripts/controllers/expense/expense_categories.js"></script>
         <script src="scripts/controllers/income/add_income.js"></script>
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
+        <script src="scripts/controllers/modal/edit_category_popup.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
