Created Incomes CHARTS.

--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,7 @@
 
         <script src="scripts/controllers/income/add_income.js"></script>
         <script src="scripts/controllers/income/incomes_history.js"></script>
+        <script src="scripts/controllers/income/incomes_chart.js"></script>
 
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
