--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <script src="scripts/controllers/user/sign_up.js"></script>
         <script src="scripts/controllers/user/login.js"></script>
         <script src="scripts/controllers/user/logout.js"></script>
+        <script src="scripts/controllers/user/profile.js"></script>
 
         <script src="scripts/controllers/expense/add_expense.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
