Retrieve data for Charts based on a Start and a End Time

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,14 @@
     <div class="footer">
       <div class="container">
         <p>
-          <span><img src="images/logo.svg" height="23" width="23"> My Money Tracker</span>
+          <span><img src="images/logo.svg" height="23" width="23"> My Money Tracker | </span>
+          <span> {{isEng() ? 'Change language:':'Schimba limba:'}}
+            <img src="{{ 'images/flags/' + FLAG}}" height="12" width="17">
+            <select ng-disabled="true" type="date" id="language" placeholder="Category" ng-model="LANGUAGE"
+                  ng-change="changeLanguage(LANGUAGE)" required>
+              <option ng-repeat="language in ['ENG', 'RO']" value="{{language}}" required>{{language}}</option>
+            </select>
+          </span>
           <span style="float:right;">Copyright © 2016 Florin - All rights reserved</span>
         </p>
       </div>
@@ -117,7 +124,6 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
 
         <script src="scripts/controllers/user/sign_up.js"></script>
         <script src="scripts/controllers/user/login.js"></script>
