Changed functionality for defaunt currency conversion

--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,7 @@
         <script src="scripts/controllers/modal/edit_category_popup.js"></script>
 
         <script src="scripts/services/category_service.js"></script>
+        <script src="scripts/services/CurrencyUtilFactory.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
         <script src="scripts/services/host_name.js"></script>
         <script src="scripts/services/modal_template_service.js"></script>
