--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
         <script src="scripts/controllers/income/incomes_chart.js"></script>
 
         <script src="scripts/controllers/modal/warning_popup.js"></script>
+        <script src="scripts/controllers/modal/change_password_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
