--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
         <script src="scripts/controllers/user/login.js"></script>
         <script src="scripts/controllers/user/logout.js"></script>
         <script src="scripts/controllers/user/profile.js"></script>
+        <script src="scripts/controllers/user/renew_forgot_password.js"></script>
 
         <script src="scripts/controllers/expense/add_expense.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
@@ -141,6 +142,7 @@
 
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/change_password_popup.js"></script>
+        <script src="scripts/controllers/modal/forgot_password_popup.js"></script>
         <script src="scripts/controllers/modal/edit_expense_popup.js"></script>
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
