--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,7 @@
         <script src="scripts/services/modal_template_service.js"></script>
 
         <script src="scripts/directives/bs_tooltip.js"></script>
+        <script src="scripts/directives/loading_page.js"></script>
 
         <script src="scripts/filters/unique.js"></script>
         <!-- endbuild -->
