--- a/app/index.html
+++ b/app/index.html
@@ -41,18 +41,18 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li class="dropdown" ng-show="authenticated">
+              <li class="dropdown" ng-if="authenticated">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                  <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></a>
+                  <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#/add_income">Add income</a></li>
                   <li><a href="#/incomes_history">Incomes history</a></li>
                   <li><a href="#/incomes_chart">Incomes chart</a></li>
                 </ul>
               </li>
-              <li class="dropdown" ng-show="authenticated">
+              <li class="dropdown" ng-if="authenticated">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                  <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></a>
+                  <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#/add_expense">Add expense</a></li>
                   <li><a href="#/expenses_history">Expenses history</a></li>
@@ -62,10 +62,10 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li ng-hide="authenticated"><a href="#/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li ng-hide="authenticated"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-              <li ng-show="authenticated"><a href="#/profile"><span class="glyphicon glyphicon-user"></span> {{username}}</a></li>
-              <li ng-show="authenticated"><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+              <li ng-if="!authenticated"><a href="#/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li ng-if="!authenticated"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li ng-if="authenticated"><a href="#/profile"><span class="glyphicon glyphicon-user"></span> {{username}}</a></li>
+              <li ng-if="authenticated"><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
           </div>
         </div>
