Fix logo.svg + EDIT EXPENSE + get Incomes/Expenses in default currecncy

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"><span><img class="menu_logo_img" src="images/logo.svg">The Accountant</span></a>
+            <a class="navbar-brand" href="#/"><span><img class="menu_logo_img" src="images/logo.svg" height="30" width="30"> The Accountant</span></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -149,6 +149,7 @@
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
         <script src="scripts/controllers/modal/edit_category_popup.js"></script>
 
+        <script src="scripts/services/expense/ExpenseUtilFactory.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/CurrencyUtilFactory.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
