--- a/app/index.html
+++ b/app/index.html
@@ -76,18 +76,18 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
+    <div class="footer navbar navbar-inverse" style="margin-bottom:0px; !important">
       <div class="container">
         <p>
-          <span><img src="images/logo.svg" height="23" width="23"> The Accountant | </span>
-          <span> {{isEng() ? 'Change language:':'Schimba limba:'}}
+          <span><img src="images/logo.svg" height="23" width="23"> The Accountant  </span>
+          <!--<span> {{isEng() ? 'Change language:':'Schimba limba:'}}
             <img src="{{ 'images/flags/' + FLAG}}" height="12" width="17">
             <select ng-disabled="true" type="date" id="language" placeholder="Category" ng-model="LANGUAGE"
                   ng-change="changeLanguage(LANGUAGE)" required>
               <option ng-repeat="language in ['ENG', 'RO']" value="{{language}}" required>{{language}}</option>
             </select>
-          </span>
-          <span style="float:right;">Copyright © 2016 Tudor & Florin - All rights reserved</span>
+          </span>-->
+          <span style="float:right;">Tudor & Florin Production</span>
         </p>
       </div>
     </div>
