--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>The Accountant</title>
+    <meta name="description" content="The Accountant is a light financial application made by Wasy Software.
+      Useful to keep your budget under control by creating helpful statistics comparing expenses and incomes.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -58,7 +59,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
                   <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#/add_income">Add income</a></li>
+                  <li><a href="#/add_incomes">Add incomes</a></li>
                   <li><a href="#/incomes_history">Incomes history</a></li>
                   <li><a href="#/incomes_chart">Incomes chart</a></li>
                 </ul>
@@ -67,7 +68,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
                   <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#/add_expense">Add expense</a></li>
+                  <li><a href="#/add_expenses">Add expenses</a></li>
                   <li><a href="#/expenses_history">Expenses history</a></li>
                   <li><a href="#/expenses_chart">Expenses chart</a></li>
                   <li><a href="#/expense_categories">Categories</a></li>
@@ -165,11 +166,11 @@
         <script src="scripts/controllers/user/profile.js"></script>
         <script src="scripts/controllers/user/renew_forgot_password.js"></script>
         <script src="scripts/controllers/user/activation.js"></script>
-        <script src="scripts/controllers/expense/add_expense.js"></script>
+        <script src="scripts/controllers/expense/add_expenses.ctrl.js"></script>
         <script src="scripts/controllers/expense/expenses_history.js"></script>
         <script src="scripts/controllers/expense/expenses_chart.js"></script>
         <script src="scripts/controllers/expense/expense_categories.js"></script>
-        <script src="scripts/controllers/income/add_income.js"></script>
+        <script src="scripts/controllers/income/add_incomes.ctrl.js"></script>
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/income/incomes_chart.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
