--- a/app/index.html
+++ b/app/index.html
@@ -48,16 +48,19 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"><span><img class="menu_logo_img" src="images/logo.svg" height="30" width="30"> The Accountant</span></a>
+            <a class="navbar-brand" href="#/">
+              <span><img class="menu_logo_img" src="images/logo.svg" height="30" width="30"> The Accountant</span>
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <!--<li class="active"><a href="#/">Home</a></li>-->
               <li class="dropdown" ng-if="authenticated === true">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                  <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></span></a>
+                  <span class="glyphicon glyphicon-piggy-bank"> Income<span class="caret"></span></span>
+                </a>
                 <ul class="dropdown-menu">
                   <li><a href="#/add_incomes">Add incomes</a></li>
                   <li><a href="#/incomes_history">Incomes history</a></li>
@@ -66,12 +69,28 @@
               </li>
               <li class="dropdown" ng-if="authenticated === true">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                  <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></span></a>
+                  <span class="glyphicon glyphicon-usd"> Expense<span class="caret"></span></span>
+                </a>
                 <ul class="dropdown-menu">
                   <li><a href="#/add_expenses">Add expenses</a></li>
                   <li><a href="#/expenses_history">Expenses history</a></li>
                   <li><a href="#/expenses_chart">Expenses chart</a></li>
                   <li><a href="#/expense_categories">Categories</a></li>
+                </ul>
+              </li>
+              <li class="dropdown" ng-if="authenticated === true">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                  <span class="glyphicon glyphicon-tags">
+                    Loans
+                    <span class="caret"></span>
+                    <span class="badge" style="font-size: 8px; background-color: green; position: absolute; top: 0px; left: 105px;">
+                      NEW
+                    </span>
+                  </span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#/add_loan">Add loan</a></li>
+                  <li><a href="#/counterparty_list">Loans history</a></li>
                 </ul>
               </li>
             </ul>
@@ -145,9 +164,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
 
+        <script src="scripts/services/_common/alert/AlertService.js"></script>
         <script src="scripts/services/expense/ExpenseUtilFactory.js"></script>
         <script src="scripts/services/income/IncomeUtilFactory.js"></script>
         <script src="scripts/services/chart/ChartUtilFactory.js"></script>
+        <script src="scripts/services/loans/LoansFactory.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/CurrencyUtilFactory.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
@@ -173,6 +194,7 @@
         <script src="scripts/controllers/income/add_incomes.ctrl.js"></script>
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/income/incomes_chart.js"></script>
+        <script src="scripts/controllers/loans/add_loan.ctrl.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/change_password_popup.js"></script>
         <script src="scripts/controllers/modal/forgot_password_popup.js"></script>
