--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a href="#/add_loan">Add loan</a></li>
-                  <li><a href="#/counterparty_list">Loans history</a></li>
+                  <li><a href="#/counterparty_list">My counterparties</a></li>
                 </ul>
               </li>
             </ul>
@@ -169,6 +169,7 @@
         <script src="scripts/services/income/IncomeUtilFactory.js"></script>
         <script src="scripts/services/chart/ChartUtilFactory.js"></script>
         <script src="scripts/services/loans/LoansFactory.js"></script>
+        <script src="scripts/services/loans/CounterpartyFactory.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/CurrencyUtilFactory.js"></script>
         <script src="scripts/services/date_time_service.js"></script>
@@ -195,6 +196,7 @@
         <script src="scripts/controllers/income/incomes_history.js"></script>
         <script src="scripts/controllers/income/incomes_chart.js"></script>
         <script src="scripts/controllers/loans/add_loan.ctrl.js"></script>
+        <script src="scripts/controllers/loans/counterparty_list.ctrl.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/change_password_popup.js"></script>
         <script src="scripts/controllers/modal/forgot_password_popup.js"></script>
@@ -202,6 +204,7 @@
         <script src="scripts/controllers/modal/edit_income_popup.js"></script>
         <script src="scripts/controllers/modal/category_filter_popup.js"></script>
         <script src="scripts/controllers/modal/edit_category_popup.js"></script>
+        <script src="scripts/controllers/modal/save-counterparty.modal.ctrl.js"></script>
         <!-- endbuild -->
 </body>
 </html>
