--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#/add_loan">Add loan</a></li>
                   <li><a href="#/counterparty_list">My counterparties</a></li>
+                  <li><a href="#/loan_list">My loans</a></li>
                 </ul>
               </li>
             </ul>
@@ -197,6 +198,7 @@
         <script src="scripts/controllers/income/incomes_chart.js"></script>
         <script src="scripts/controllers/loans/add_loan.ctrl.js"></script>
         <script src="scripts/controllers/loans/counterparty_list.ctrl.js"></script>
+        <script src="scripts/controllers/loans/loan_list.ctrl.js"></script>
         <script src="scripts/controllers/modal/warning_popup.js"></script>
         <script src="scripts/controllers/modal/change_password_popup.js"></script>
         <script src="scripts/controllers/modal/forgot_password_popup.js"></script>
